# doom-flipjump

./: .gitattributes  .gitignore  DESIGN.md  HANDOFF_M0.md  NEXT_SESSION_HANDOFF.md  README.md  doom_implementation_handoff.md  pyproject.toml
docs/: cr-rules.md  d15-disposition.md  known-warnings.md  m0-fail.txt  m0-pass.txt  m1-fail.txt  m1-integration.txt  m1-pass.txt  m10-fail.txt  m10-pass.txt  m10-r0.txt  m11a-fail.txt  m11a-pass.txt  m11a-present.txt  m11b-fail.txt  m11b-pass.txt  m11b-textured.txt  m11c-bakeoff-metrics.json  m11c-fail.txt  m11c-pass.txt  m12a-fail.txt  m12aa-fail.txt  m12aa-pass.txt  m12b-fail.txt  m12bb-fail.txt  m12bb-pass.txt  m12c-fail.txt  m12c-pass.txt  m12cc-fail.txt  m12cc-pass.txt  m12d-fail.txt  m12d-pass.txt  m12dd-fail.txt  m12dd-pass.txt  m12e-fail.txt  m12e-pass.txt  m12ee-fail.txt  m12ee-pass.txt  m12f-fail.txt  m12ff-fail.txt  (+128 more)
scripts/: build.sh  fetch_doom1.sh  fetch_freedoom.sh  m11c_evidence.py  m12h_evidence.py  m12i_evidence.py  m12j_evidence.py  m5_evidence.py  m6_evidence.py  m7_evidence.py  m8_evidence.py  test.sh
versions/: README.md  bsp-bake-M12i.json  bsp-traversal-M12a.json  dispatch-emitter-M5.json  draw-span-kernel-M13d1.json  fixed-point-M2.fjm  flat-planes-M13c3a.json  flat-planes-e1m1-M13c3b.json  floor-luts-M13c1.json  floor-planes-M13a.json  floor-planes-M13b.json  hello-M0.fjm  integration-M10.json  lut-access-M6.json  map-compile-M7.json  memory-map-M1.fjm  oracle-M9.json  plane-kernel-M13c2.json  point-to-angle-M12b.json  point-to-dist-M12d.json  present-slice-M11a.json  tables-M4.json  textures-M8.json  (+9 more)
(+71 files in other folders)
